--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
+		<title>Ouyang's github</title>
+		<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/build/packaged/css/semantic.min.css">
+
+		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script type="text/javascript" src="bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
 	</head>
 	<body>
-		<div id="main-container">asdf
+		<div className="segment">
+			<div className="ui page grid">
+				<h4 className="ui dividing header">
+					<pre>                                           __
+                               __         /\ \__
+ _ __   __  __    ___      __ /\_\    ____\ \ ,_\
+/\`'__\/\ \/\ \ /' _ `\  /'_ `\/\ \  /',__\\ \ \/
+\ \ \/ \ \ \_\ \/\ \/\ \/\ \L\ \ \ \/\__, `\\ \ \_
+ \ \_\  \ \____/\ \_\ \_\ \____ \ \_\/\____/ \ \__\
+  \/_/   \/___/  \/_/\/_/\/___L\ \/_/\/___/   \/__/
+                           /\____/
+                           \_/__/
+          </pre>
+				</h4>
+			</div>
+		</div>
+
+		<div id="main-container">wait...planet express...
 		</div>
 		<script src="js/bundle.js"></script>
 	</body>
