--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 
 		<title>Ouyang's github</title>
 		<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/build/packaged/css/semantic.min.css">
-
+    <style>
+     code, #editor {
+       -moz-user-select: none;
+       color: black;
+       font-family: "Monaco","Menlo","Ubuntu Mono","Consolas","source-code-pro",monospace;
+       font-size: 12px;
+       line-height: normal;
+       overflow: hidden;
+       position: relative;
+     }
+     .ace-github .ace_cursor {
+       border-left: medium none;
+     }
+    </style>
+    <script src="bower_components/ace-builds/src-noconflict/ace.js"></script>
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
 	</head>
@@ -28,7 +42,6 @@
 				</h4>
 			</div>
 		</div>
-
 		<div id="main-container">wait...planet express...
 		</div>
 		<script src="js/bundle.js"></script>
