--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
      .ace-github .ace_cursor {
        border-left: medium none;
      }
+     .hidden {
+       display:none;
+     }
     </style>
     <script src="bower_components/ace-builds/src-noconflict/ace.js"></script>
 		<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -42,7 +45,8 @@
 				</h4>
 			</div>
 		</div>
-		<div id="main-container">wait...planet express...
+		<div id="main-container">
+      wait...planet express...
 		</div>
 		<script src="js/bundle.js"></script>
 	</body>
