add 3rd party css and js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Ouyang's github</title>
 		<link rel="stylesheet" type="text/css" href="bower_components/semantic-ui/build/packaged/css/semantic.min.css">
     <style>
-     code, #editor {
+     .codeblock {
        -moz-user-select: none;
        color: black;
        font-family: "Monaco","Menlo","Ubuntu Mono","Consolas","source-code-pro",monospace;
@@ -29,9 +29,8 @@
 		<script type="text/javascript" src="bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
 	</head>
 	<body>
-		<div className="segment">
-			<div className="ui page grid">
-				<h4 className="ui dividing header">
+			<div class="ui page grid">
+				<h4 class="ui dividing header">
 					<pre>                                           __
                                __         /\ \__
  _ __   __  __    ___      __ /\_\    ____\ \ ,_\
@@ -43,11 +42,19 @@
                            \_/__/
           </pre>
 				</h4>
+
+        <div id="main-container">
+          wait...planet express...
+		    </div>
+        <div class="ui divided horizontal footer link list">
+          <div class="item">Jichao Ouyang 2014</div>
+          <a class="item" href="https://github.com/rungist/rungist.github.com">Github</a>
+          <div class="item">
+            Made by <a target="_blank" href="http://oyanglul.us">oyanglul.us</a>
+          </div>
+        </div>
+
 			</div>
-		</div>
-		<div id="main-container">
-      wait...planet express...
-		</div>
 		<script src="js/bundle.js"></script>
 	</body>
 </html>
