--- a/index.html
+++ b/index.html
@@ -44,7 +44,30 @@
 				</h4>
 
         <div id="main-container">
-          wait...planet express...
+          <h4 class="ui header">
+                  <pre>
+  _                                                             _     _     _                    _
+ / |     ___  _ __   ___ _ __    _   _  ___  _   _ _ __    __ _(_)___| |_  (_)_ __    _ __ _   _| |__  _   _
+ | |    / _ \| '_ \ / _ \ '_ \  | | | |/ _ \| | | | '__|  / _` | / __| __| | | '_ \  | '__| | | | '_ \| | | |
+ | |_  | (_) | |_) |  __/ | | | | |_| | (_) | |_| | |    | (_| | \__ \ |_  | | | | | | |  | |_| | |_) | |_| |
+ |_(_)  \___/| .__/ \___|_| |_|  \__, |\___/ \__,_|_|     \__, |_|___/\__| |_|_| |_| |_|   \__,_|_.__/ \__, |
+             |_|                 |___/                    |___/                                        |___/
+  ____                _     _   _                  _   _          __                          __   _       _     _   _
+ |___ \      __ _  __| | __| | ( )_ __ _   _ _ __ ( ) (_)_ __    / _|_ __ ___  _ __     ___  / _| ( ) __ _(_)___| |_( )
+   __) |    / _` |/ _` |/ _` | |/| '__| | | | '_ \|/  | | '_ \  | |_| '__/ _ \| '_ \   / _ \| |_  |/ / _` | / __| __|/
+  / __/ _  | (_| | (_| | (_| |   | |  | |_| | | | |   | | | | | |  _| | | (_) | | | | | (_) |  _|   | (_| | \__ \ |_
+ |_____(_)  \__,_|\__,_|\__,_|   |_|   \__,_|_| |_|   |_|_| |_| |_| |_|  \___/|_| |_|  \___/|_|      \__, |_|___/\__|
+                                                                                                     |___/
+  _____                 _                _   _     _                                 _                    _
+ |___ /     ___  _ __  | |_ _ __ _   _  | |_| |__ (_)___   ___  __ _ _ __ ___  _ __ | | ___    ___  _   _| |_  __| |__
+   |_ \    / _ \| '__| | __| '__| | | | | __| '_ \| / __| / __|/ _` | '_ ` _ \| '_ \| |/ _ \  / _ \| | | | __| \     /
+  ___) |  | (_) | |    | |_| |  | |_| | | |_| | | | \__ \ \__ \ (_| | | | | | | |_) | |  __/ | (_) | |_| | |_   \   /
+ |____(_)  \___/|_|     \__|_|   \__, |  \__|_| |_|_|___/ |___/\__,_|_| |_| |_| .__/|_|\___|  \___/ \__,_|\__|   \_/
+                                 |___/                                        |_|
+                                                                                                       
+                  </pre>
+                  <a href="http://oyanglul.us"> <pre>hehe</pre></a>
+          </h4>
 		    </div>
         <div class="ui divided horizontal footer link list">
           <div class="item">Jichao Ouyang 2014</div>
