--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
      }
     </style>
     <script src="/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
-		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="/bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
+		<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="/bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
+    <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
 	</head>
 	<body>
 			<div class="ui page grid">
@@ -66,14 +67,15 @@
                                  |___/                                        |_|
                                                                                                        
                   </pre>
-                  <a href="http://oyanglul.us"> <pre>hehe</pre></a>
+                  <a class="bottom attached ui positive button" href="https://rungist.github.com/jcouyang/46bb290f1b99eef15639">rungist.github.com/jcouyang/46bb290f1b99eef15639</a>
           </h4>
 		    </div>
+        <div class="ui divider"> </div>
         <div class="ui divided horizontal footer link list">
           <div class="item">Jichao Ouyang 2014</div>
           <a class="item" href="https://github.com/rungist/rungist.github.com">Github</a>
           <div class="item">
-            Made by <a target="_blank" href="http://oyanglul.us">oyanglul.us</a>
+            Made by <a target="_blank" href="http://oyanglul.us/gist/952eaaf9e5dba90e3cc1">oyanglul.us</a>
           </div>
         </div>
 
