--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 		<title>Ouyang's github</title>
 		<link rel="stylesheet" type="text/css" href="/bower_components/semantic-ui/build/packaged/css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/fontawesome/css/font-awesome.min.css">
     <style>
      .codeblock {
        -moz-user-select: none;
