--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
 
 		<title>Ouyang's github</title>
 		<link rel="stylesheet" type="text/css" href="/bower_components/semantic-ui/build/packaged/css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/fontawesome/css/font-awesome.min.css">
     <style>
      .codeblock {
        -moz-user-select: none;
@@ -25,8 +26,9 @@
      }
     </style>
     <script src="/bower_components/ace-builds/src-min-noconflict/ace.js"></script>
-		<script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="/bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
+		<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="/bower_components/semantic-ui/build/packaged/javascript/semantic.min.js"></script>
+    <script src="/bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
 	</head>
 	<body>
 			<div class="ui page grid">
@@ -44,13 +46,37 @@
 				</h4>
 
         <div id="main-container">
-          wait...planet express...
+          <h4 class="ui header">
+                  <pre>
+  _                                                             _     _     _                    _
+ / |     ___  _ __   ___ _ __    _   _  ___  _   _ _ __    __ _(_)___| |_  (_)_ __    _ __ _   _| |__  _   _
+ | |    / _ \| '_ \ / _ \ '_ \  | | | |/ _ \| | | | '__|  / _` | / __| __| | | '_ \  | '__| | | | '_ \| | | |
+ | |_  | (_) | |_) |  __/ | | | | |_| | (_) | |_| | |    | (_| | \__ \ |_  | | | | | | |  | |_| | |_) | |_| |
+ |_(_)  \___/| .__/ \___|_| |_|  \__, |\___/ \__,_|_|     \__, |_|___/\__| |_|_| |_| |_|   \__,_|_.__/ \__, |
+             |_|                 |___/                    |___/                                        |___/
+  ____                _     _   _                  _   _          __                          __   _       _     _   _
+ |___ \      __ _  __| | __| | ( )_ __ _   _ _ __ ( ) (_)_ __    / _|_ __ ___  _ __     ___  / _| ( ) __ _(_)___| |_( )
+   __) |    / _` |/ _` |/ _` | |/| '__| | | | '_ \|/  | | '_ \  | |_| '__/ _ \| '_ \   / _ \| |_  |/ / _` | / __| __|/
+  / __/ _  | (_| | (_| | (_| |   | |  | |_| | | | |   | | | | | |  _| | | (_) | | | | | (_) |  _|   | (_| | \__ \ |_
+ |_____(_)  \__,_|\__,_|\__,_|   |_|   \__,_|_| |_|   |_|_| |_| |_| |_|  \___/|_| |_|  \___/|_|      \__, |_|___/\__|
+                                                                                                     |___/
+  _____                 _                _   _     _                                 _                    _
+ |___ /     ___  _ __  | |_ _ __ _   _  | |_| |__ (_)___   ___  __ _ _ __ ___  _ __ | | ___    ___  _   _| |_  __| |__
+   |_ \    / _ \| '__| | __| '__| | | | | __| '_ \| / __| / __|/ _` | '_ ` _ \| '_ \| |/ _ \  / _ \| | | | __| \     /
+  ___) |  | (_) | |    | |_| |  | |_| | | |_| | | | \__ \ \__ \ (_| | | | | | | |_) | |  __/ | (_) | |_| | |_   \   /
+ |____(_)  \___/|_|     \__|_|   \__, |  \__|_| |_|_|___/ |___/\__,_|_| |_| |_| .__/|_|\___|  \___/ \__,_|\__|   \_/
+                                 |___/                                        |_|
+                                                                                                       
+                  </pre>
+                  <a class="bottom attached ui positive button" href="https://rungist.github.com/jcouyang/46bb290f1b99eef15639">rungist.github.com/jcouyang/46bb290f1b99eef15639</a>
+          </h4>
 		    </div>
+        <div class="ui divider"> </div>
         <div class="ui divided horizontal footer link list">
           <div class="item">Jichao Ouyang 2014</div>
           <a class="item" href="https://github.com/rungist/rungist.github.com">Github</a>
           <div class="item">
-            Made by <a target="_blank" href="http://oyanglul.us">oyanglul.us</a>
+            Made by <a target="_blank" href="http://oyanglul.us/gist/952eaaf9e5dba90e3cc1">oyanglul.us</a>
           </div>
         </div>
 
