--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
 		<title>Ouyang's github</title>
 		<link rel="stylesheet" type="text/css" href="/bower_components/semantic-ui/build/packaged/css/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="/bower_components/fontawesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/octicons/octicons/octicons.css">
     <style>
      .codeblock {
        -moz-user-select: none;
