--- a/404.html
+++ b/404.html
@@ -60,15 +60,15 @@
   / __/ _  | (_| | (_| | (_| |   | |  | |_| | | | |   | | | | | |  _| | | (_) | | | | | (_) |  _|   | (_| | \__ \ |_
  |_____(_)  \__,_|\__,_|\__,_|   |_|   \__,_|_| |_|   |_|_| |_| |_| |_|  \___/|_| |_|  \___/|_|      \__, |_|___/\__|
                                                                                                      |___/
-                   _                _   _     _                                 _                    _
-       ___  _ __  | |_ _ __ _   _  | |_| |__ (_)___   ___  __ _ _ __ ___  _ __ | | ___    ___  _   _| |_  __| |__
-      / _ \| '__| | __| '__| | | | | __| '_ \| / __| / __|/ _` | '_ ` _ \| '_ \| |/ _ \  / _ \| | | | __| \     /
-     | (_) | |    | |_| |  | |_| | | |_| | | | \__ \ \__ \ (_| | | | | | | |_) | |  __/ | (_) | |_| | |_   \   /
-      \___/|_|     \__|_|   \__, |  \__|_| |_|_|___/ |___/\__,_|_| |_| |_| .__/|_|\___|  \___/ \__,_|\__|   \_/
-                            |___/                                        |_|
-                                                                                                           
+  _____                 _                _   _     _                                 _                    _
+ |___ /     ___  _ __  | |_ _ __ _   _  | |_| |__ (_)___   ___  __ _ _ __ ___  _ __ | | ___    ___  _   _| |_  __| |__
+   |_ \    / _ \| '__| | __| '__| | | | | __| '_ \| / __| / __|/ _` | '_ ` _ \| '_ \| |/ _ \  / _ \| | | | __| \     /
+  ___) |  | (_) | |    | |_| |  | |_| | | |_| | | | \__ \ \__ \ (_| | | | | | | |_) | |  __/ | (_) | |_| | |_   \   /
+ |____(_)  \___/|_|     \__|_|   \__, |  \__|_| |_|_|___/ |___/\__,_|_| |_| |_| .__/|_|\___|  \___/ \__,_|\__|   \_/
+                                 |___/                                        |_|
+                                                                                                       
                   </pre>
-                  <div class="right floated four wide column"><a href="https://rungist.github.com/jcouyang/46bb290f1b99eef15639">rungist.github.com/jcouyang/46bb290f1b99eef15639</a></div>
+                  <a class="bottom attached ui positive button" href="https://rungist.github.com/jcouyang/46bb290f1b99eef15639">rungist.github.com/jcouyang/46bb290f1b99eef15639</a>
           </h4>
 		    </div>
         <div class="ui divider"> </div>
